# Multi_Cursor.nvim

./: .gitignore  LICENSE  README.md  pyproject.toml
autoload/health/: multi_cursor.vim
doc/: multi_cursor.txt  tags
lua/health/: multi_cursor.lua
lua/multi_cursor/: actions.lua  config.lua  health.lua  init.lua  keymaps.lua  legacy.lua  picker.lua  render.lua  search.lua  state.lua  types.lua
plugin/: multi_cursor.lua
tests/: README.md  nvim_case.py  test_backend_parity_subset.py  test_backend_switch.py  test_legacy_parity.py  test_lua_core.py  test_lua_tools.py
